# PRISM

./: .env.example  .gitignore  CLAUDE.md  PRISM_Demo_Product_Ledgerflow.md  README.md  V1_ROADMAP.md  pyproject.toml
docs/: PRISM_Build_Plan_v01.md  PRISM_Dossier_Template_Spec.md  PRISM_Extraction_Schema_v1.md  PRISM_Scoring_Weights_v1.md  PRISM_v1_Architecture_Session_Summary.md  V1_BUILD_PLAN.md  prism-architecture.jsx
examples/dossiers/: brighthire_dossier.md
fixtures/companies/: _template.json  brighthire.json  cloudbolt.json  codebridge.json  datacanvas.json  finpulse.json  greenledger.json  meridian_health.json  shipstream.json  stacksync.json  velocitypay.json
prism/: __init__.py  cli.py  config.py  pipeline.py  tasks.py
prism/analysis/: __init__.py  content_intel.py  scoring.py  signal_decay.py
prism/api/: __init__.py  deps.py  routes.py  schemas.py
prism/data/: __init__.py  dal.py  database_dal.py  fixture_dal.py  loader.py  product.py
prism/db/: __init__.py  converters.py  models.py  session.py
prism/models/: __init__.py  account.py  activation.py  analysis.py  contact.py  content.py  extraction.py  signal.py
prism/output/: __init__.py  dossier.py
prism/prompts/: README.md
prism/prompts/v1/: activation_angle.txt  stage1_extraction.txt  stage2_synthesis.txt  stage3_person.txt  stage4_scoring.txt
prism/services/: __init__.py  extraction.py  llm.py  llm_backend.py  scraper.py
prism/services/backends/: __init__.py  anthropic_backend.py  local_backend.py  router.py
prism/services/enrichment/: __init__.py  apollo.py  base.py  blog_scraper.py  job_boards.py  orchestrator.py
tests/: conftest.py  test_api.py  test_content_intel.py  test_converters.py  test_dal.py  test_db_models.py  test_dossier.py  test_enrichment.py  test_extraction.py  test_llm_backend.py  test_scoring.py  test_signal_decay.py  test_tasks.py
