[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism"
version = "0.1.0"
description = "Predictive Revenue Intelligence & Signal Mapping"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Joseph Sherman"},
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "anthropic>=0.39.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
prism = "prism.cli:cli"

[tool.setuptools.packages.find]
include = ["prism*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
